--- a/WDLesson1_2Practical/index.html
+++ b/WDLesson1_2Practical/index.html
@@ -46,6 +46,7 @@
   <img src="images/HulkSmash1.jpg">
   <img src="images/HulkSmash1.png">
   <img src="images/HulkSmash1.jpg">
+  <img src="images/HulkSmash1.jpg">
   <hr>
   <!-- Challenge Bonus: Create a heading with "Marvel Superheroes".  Add a horizontal rule.  Add five images of Marvel Superheroes.  Make them all the same size -->
   </body>
