--- a/WDLesson1_2Practical/index.html
+++ b/WDLesson1_2Practical/index.html
@@ -44,7 +44,7 @@
   <!-- Challenge 7: Create an <h3> and put "Challenge 7". Add the other two images located in the images folder -->
   <h3> "Challenge 7"</h3> 
   <img src="images/HulkSmash2.png">
- 
+  <img src="images/HulkSmash2.png">
   <img src="images/HulkSmash3.jpg">
   
   <hr>
