--- a/WDLesson1_3Practical/index.html
+++ b/WDLesson1_3Practical/index.html
@@ -14,26 +14,28 @@
         <a href="http://www.baysidehighschool.org/"> w3schools </a> 
     -->
     <!-- Challenge 1: Add a heading for "Useful Links". -->
-
+    <h1>"Useful Links"</h1>
     <!-- Challenge 2: Add a horizontal rule underneath. -->
-
+    <hr>
     <!-- Challenge 3: Create a link to https://www.tutorialspoint.com/ -->
-
+        <a href="https://www.tutorialspoint.com/"> tutorialspoint </a>
     <!-- Challenge 4: Add a break to skip down to the next line -->
-
+        <br>
     <!-- Challenge 5: Create a link to https://www.codecademy.com/ -->
-
+        <a href="https://www.codecademy.com/"> codecademy </a>
     <!-- Challenge 6: Add a break to skip down to the next line -->
-  
+        <br>
     <!-- Challenge 7: Create a link to https://www.w3schools.com/ -->
-    
+        <a href="https://www.w3schools.com/"> w3schools </a> 
     <!-- Challenge 8: Add a horizontal rule and break -->
- 
+        <hr> <br> 
     <!-- Example of link to an internal sources 
       <a href="resources/dukenukem.jpg"> Duke Nukem </a> <br>
     -->
     <!-- Challenge 9: Create links for the rest of the items located in resources -->
-
+        <a href="resources/GUN.WAV">  Gun sound </a> <br>
+        <a href="resources/BellSchedule.pdf"> BellSchedule </a> <br>
+        <a href="resources/311Data.js"> 311Data </a> <br>
     <!-- Challenge Bonus: Create links to your Lesson 1 and Lesson 2 Activities.  Hint: Use the same link that you posted in Google Classroom for the submission of each Lesson Activity -->
   </body>
 </html>
