--- a/WDLesson1_4Practical/index.html
+++ b/WDLesson1_4Practical/index.html
@@ -16,17 +16,25 @@
     </a>
     --> 
     <!-- Challenge 1: Add a heading with "Hyperlinking HTML Elements" followed by a horizontal rule-->
-
+    <h1>Hyperlinking HTML Elements</h1>
+    <hr>
     <!-- Challenge 2: Add the image for tutorialpoints that is stored locally and make it
-     a hyperlink to  https://www.tutorialspoint.com/ that will open in a new tab -->
+     <a href="https://www.tutorialspoint.com/" target="_blank">
+      <img src="tutorialpoints.jpg" alt="TutorialsPoint" height="100">
+    </a>
 
     <!-- Challenge 3: Add a paragraph describing JavaScript and make the paragraph a hyperlink to 
      https://javascript.info/ that will open in the SAME tab.-->
-
+     <a href="https://javascript.info/">
+      <p>JavaScript is a versatile programming language commonly used to create interactive effects within web browsers.</p>
+    </a>
+    
     <!-- Challenge 4: Add an <h2> for "Career & Technical Education" and make the heading a hyperlink to 
       the cte.html file which is stored internally in the folder.  
       Note: You can link to other web pages.  This is how websites are created! -->
-
+     <a href="cte.html">
+      <h2>Career & Technical Education</h2>
+    </a>
     <!-- Challenge Bonus:  Complete all the challenges located in cte.html.  
      Note: Click on cte.html to open the html file and start editing. -->
   </body>
