--- a/WDLesson1_4Practical/cte.html
+++ b/WDLesson1_4Practical/cte.html
@@ -5,12 +5,17 @@
   </head>
   <body>
     <!-- Challenge Bonus 1: Add a heading for Computer Programming and Web Design -->
-
+    <h1>Computer Programming and Web Design</h1>
+    
     <!-- Challenge Bonus 2: Add an image for Bayside High School and make image a link 
      to https://rcastro2.github.io/CPWDCTE/ -->
-
+    <a href="https://rcastro2.github.io/CPWDCTE/" target="_blank">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQqyRnjjLWKfJe1IWi33_zQVA55s2Sf6DSyow&s"  height="400">
+    </a>
      <!-- Challenge Bonus 3: Add a paragraph describing the Computer Programming and Web Design CTE.
       Hint: Visit the website from Challenge Bonus 2 to learn more about the program. -->
-
+    <p>
+  The Computer Programming and Web Design (CPWD) program provides a rigorous academic course of study which prepares students for post-secondary education and careers in software development.
+</p>
   </body>
 </html>
