--- a/WDLesson1_4Practical/index.html
+++ b/WDLesson1_4Practical/index.html
@@ -33,7 +33,7 @@
       the cte.html file which is stored internally in the folder.  
       Note: You can link to other web pages.  This is how websites are created! -->
      <a href="cte.html">
-      <h2>Career & Technical Education</h2>
+      <h2>Career & technical Education</h2>
     </a>
     <!-- Challenge Bonus:  Complete all the challenges located in cte.html.  
      Note: Click on cte.html to open the html file and start editing. -->
