--- a/WDLesson1_4Practical/index.html
+++ b/WDLesson1_4Practical/index.html
@@ -18,9 +18,9 @@
     <!-- Challenge 1: Add a heading with "Hyperlinking HTML Elements" followed by a horizontal rule-->
     <h1>Hyperlinking HTML Elements</h1>
     <hr>
-    <!-- Challenge 2: Add the image for tutorialpoints that is stored locally and make it
+    <!--Challenge 2: Add the image for tutorialpoints that is stored locally and make it -->
      <a href="https://www.tutorialspoint.com/" target="_blank">
-      <img src="tutorialpoints.jpg" alt="TutorialsPoint" height="100">
+      <img src="tutorialpoint.png" height="100">
     </a>
 
     <!-- Challenge 3: Add a paragraph describing JavaScript and make the paragraph a hyperlink to 
