--- a/WDLesson2_5Practical/index.html
+++ b/WDLesson2_5Practical/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <!-- WD Lesson 2.5: How can we modify CSS rules when a visitor hovers over an element?-->
-<!-- Resources 
-      https://www.w3schools.com/css/default.asp 
-      https://www.w3schools.com/css/css_selectors.asp 
+<!-- Resources
+      https://www.w3schools.com/css/default.asp
+      https://www.w3schools.com/css/css_selectors.asp
       https://www.w3schools.com/css/css_pseudo_classes.asp
-      https://www.w3schools.com/cssref/css3_pr_filter.php 
-      https://www.w3schools.com/css/css3_transitions.asp 
+      https://www.w3schools.com/cssref/css3_pr_filter.php
+      https://www.w3schools.com/css/css3_transitions.asp
 -->
 <html>
   <head>
@@ -14,22 +14,41 @@
   </head>
   <body>
     <script src="script.js"></script>
-    <!-- Challenge 1: Create a div container with id of banner.  Add a heading 1 with the text "Gallery" to the container.-->
 
-    <!-- Challenge 2: Create a div container with class of subbanner. Add a heading 3 with appropriate text that
-                      represents the theme of the first photo gallery -->
+    <!-- Challenge 1: Create a div container with id of banner.  Add a heading 1 with the text "Gallery" to the container.-->
+    <div id="banner">
+      <h1>Gallery</h1>
+    </div>
+
+    <!-- Challenge 2: Create a div container with class of subbanner. Add a heading 3 with appropriate text that represents the theme of the first photo gallery -->
+    <div class="subbanner">
+      <h3>LeBron James Gallery</h3>
+    </div>
 
     <!-- Challenge 3: Add a brief paragraph describing the theme of the first photo gallery -->
+    <p>Here are some of the best moments from LeBron James' basketball career.</p>
 
-    <!-- Challenge 4: Create a div container with a class of gallery and an id of firstGallery.  Add at least three images based 
-                      on the theme of the first photo gallery-->
-    
-    <!-- Challenge 5: Create a div container with class of subbanner. Add a heading 3 with appropriate text that
-                      represents the theme of the second photo gallery -->
+    <!-- Challenge 4: Create a div container with a class of gallery and an id of firstGallery.  Add at least three images based on the theme of the first photo gallery -->
+    <div class="gallery" id="firstGallery">
+      <img src="https://www.si.com/.image/c_fill,w_1200,ar_1:1,f_auto,q_auto,g_auto/MTY4MTY4MDM0OTIxNzUxODI1/nba-finals-lebron-james-cavs-warriors-game-7-videojpg.jpg">
+      <img src="https://cdn.nba.com/manage/2021/07/lebron-title-2012.jpg">
+      <img src="https://w0.peakpx.com/wallpaper/164/619/HD-wallpaper-lebron-y-ad-2020-23-anthony-davis-champions-king-la-ceja-lakers-lebron-james-nba-nba-champions-2020-thumbnail.jpg">
+    </div>
+
+    <!-- Challenge 5: Create a div container with class of subbanner. Add a heading 3 with appropriate text that represents the theme of the second photo gallery -->
+    <div class="subbanner">
+      <h3>Kobe Bryant Gallery</h3>
+    </div>
 
     <!-- Challenge 6: Add a brief paragraph describing the theme of the second photo gallery -->
+    <p>This gallery shows some amazing moments from Kobe Bryant's legendary career.</p>
 
-    <!-- Challenge 7: Create a div container with a class of gallery and an id of secondGallery.  Add at least three images based 
-                      on the theme of the second photo gallery-->
+    <!-- Challenge 7: Create a div container with a class of gallery and an id of secondGallery.  Add at least three images based on the theme of the second photo gallery -->
+    <div class="gallery" id="secondGallery">
+      <img src="https://www.lakersuniverse.com/kobe/images/kobepicture8b.jpg"> 
+      <img src="https://a.espncdn.com/photo/2009/0614/nba_g_kobepostgm2_576.jpg">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDKgPi-2nHbaM4dEW1S08aJQCG_2IA9Ein3w&s"> 
+    </div>
+
   </body>
 </html>
