--- a/WDLesson2_6Practical/html.html
+++ b/WDLesson2_6Practical/html.html
@@ -17,7 +17,7 @@
     <style>
       /* Challenge 6: Using internal styling,  change the color of the web page.*/
        body {
-    background-color: lightblue;
+    background-color: rgb(68, 179, 164);
   }
       /* Further challenges are located in style.css  */
 
@@ -40,17 +40,15 @@
     </nav>
     <!-- Challenge 2: Create a banner container with heading of "Web Development".  Give it a class of "banner".-->
     <div class="banner">
-    <h1>Web Development</h1>
+    <h1>HTML</h1>
     </div>
     <div class ="main">
       <!-- Challenge 3: Add the image of webicons.png-->
-      <img src="webicons.png" width="200">
+      <img src="html.png"  width="200">
       <!-- Challenge 4: Using inline styling, resize the above image appropriately -->
       <!-- Challenge 5: Write a paragraph describing web development.  Discuss the purpose of HTML, CSS and JavaScript -->
       <p>
-      Web development is the process of creating websites and web applications. 
-      HTML provides the structure, CSS controls the design and layout, and 
-      JavaScript adds interactivity and dynamic behavior.
+      HTML, or HyperText Markup Language, is the standard markup language used to create web pages and web applications. It is the fundamental building block of the World Wide Web, defining the structure and content of web documents.
      </p>
     </div>
 
