--- a/WDLesson2_6Practical/css.html
+++ b/WDLesson2_6Practical/css.html
@@ -17,7 +17,7 @@
     <style>
       /* Challenge 6: Using internal styling,  change the color of the web page.*/
        body {
-    background-color: lightblue;
+    background-color: rgb(153, 226, 94);
   }
       /* Further challenges are located in style.css  */
 
@@ -40,17 +40,15 @@
     </nav>
     <!-- Challenge 2: Create a banner container with heading of "Web Development".  Give it a class of "banner".-->
     <div class="banner">
-    <h1>Web Development</h1>
+    <h1>CSS</h1>
     </div>
     <div class ="main">
       <!-- Challenge 3: Add the image of webicons.png-->
-      <img src="webicons.png" width="200">
+      <img src="css.png"  width="200">
       <!-- Challenge 4: Using inline styling, resize the above image appropriately -->
       <!-- Challenge 5: Write a paragraph describing web development.  Discuss the purpose of HTML, CSS and JavaScript -->
       <p>
-      Web development is the process of creating websites and web applications. 
-      HTML provides the structure, CSS controls the design and layout, and 
-      JavaScript adds interactivity and dynamic behavior.
+      CSS, or Cascading Style Sheets, is a stylesheet language used to describe the presentation of a document written in a markup language like HTML. It is used to control the colors, layouts, fonts, and other visual aspects of a webpager.
      </p>
     </div>
 
