--- a/WDLesson3_4Practical/index.html
+++ b/WDLesson3_4Practical/index.html
@@ -21,9 +21,12 @@
                  3) A girl's name
                  4) Another vegetable
     -->
-
+      <input type="text" id="boyName" placeholder="Boy's Name">
+      <input type="text" id="vegOne" placeholder="A Vegetable">
+      <input type="text" id="girlName" placeholder="Girl's Name">
+      <input type="text" id="vegTwo" placeholder="Another Vegetable">
     <!-- Task 2: Create a button that calls createStory() -->
-
+      <input type="button" value= "Show Story" onclick="createStory()>
     <!-- All other Tasks are located in script.js -->
     </div>
     <div class="container subbanner center">
