--- a/WDLesson3_4Practical/index.html
+++ b/WDLesson3_4Practical/index.html
@@ -26,7 +26,7 @@
       <input type="text" id="girlName" placeholder="Girl's Name">
       <input type="text" id="vegTwo" placeholder="Another Vegetable">
     <!-- Task 2: Create a button that calls createStory() -->
-      <input type="button" value= "Show Story" onclick="createStory()>
+      <input type="button" value="Show Story" onclick="createStory()">
     <!-- All other Tasks are located in script.js -->
     </div>
     <div class="container subbanner center">
