--- a/WDLesson3_5Practical/circle.html
+++ b/WDLesson3_5Practical/circle.html
@@ -24,7 +24,9 @@
       </div>
       <div class="card">
         <!-- Challenge 3: Create the necessary UI in order to calculate the area and circumference of a circle.  This will require separate buttons for area and circumference each with their own handler. -->
-
+        <input type="text" placeholder="Enter radius" id="rad">
+        <input type="button" value="Area" onclick="cirArea()">
+        <input type="button" value="Circumference" onclick="cirPerimeter()">
         <!-- Go to script.js to complete Challenge 4 --> 
         
       </div>
