--- a/WDLesson3_5Practical/rectangle.html
+++ b/WDLesson3_5Practical/rectangle.html
@@ -24,6 +24,12 @@
       <div class="card">
         <!-- Challenge 1: Create the necessary UI in order to calculate the area and perimeter of a rectangle.  
          This will require separate buttons for area and perimeter each with their own event handler. -->
+        <input type="text" placeholder="Enter length" id="l">
+        <input type="text" placeholder="Enter width" id="w">
+        <input type="button" value="Area" onclick="recArea()">
+        <input type="button" value="perimeter" onclick="recPerimeter()">
+
+        <div id="output"></div>
 
         <!-- Go to script.js to complete Challenge 2 --> 
 
