--- a/WDLesson3_5Practical/circle.html
+++ b/WDLesson3_5Practical/circle.html
@@ -27,6 +27,8 @@
         <input type="text" placeholder="Enter radius" id="rad">
         <input type="button" value="Area" onclick="cirArea()">
         <input type="button" value="Circumference" onclick="cirPerimeter()">
+
+        <div id="output"></div>
         <!-- Go to script.js to complete Challenge 4 --> 
         
       </div>
