--- a/WDLesson3_6Practical/index.html
+++ b/WDLesson3_6Practical/index.html
@@ -23,6 +23,13 @@
     </div>
     <div class="solutions">
       <!-- Challenge 1: UI for Average program. Note: User will enter three grades as three separate inputs. -->
+      <input type="text" placeholder="grade1" id="g1">
+      <input type="text" placeholder="grade2" id="g2">
+      <input type="text" placeholder="grade3" id="g3">
+      <input type="button" value="Average" onclick="Average()">
+
+      <div id="output"></div>
+
       <!-- Challenge 2 is in script.js -->
 
     </div>
