--- a/WDLesson3_7Practical/compound.html
+++ b/WDLesson3_7Practical/compound.html
@@ -27,7 +27,13 @@
         </p>
         <hr>
         <!-- Challenge 3: Create the necessary UI in order to calculate the compound interest.  Observe all the variables on the right side of the equal side these are required pieces of information. -->
-
+        <input type="text" id="p" placeholder="Principal amount $"><br>
+        <input type="text" id="r" placeholder="Interest rate (not.decimal)"><br>
+        <input type="text" id="n" placeholder="Number of times per year to compound"><br>
+        <input type="text" id="t" placeholder="Total years of investment"><br>
+        <input type="button" onclick="interest()" value="Calculate">
+        <hr>
+        <div id="output"></div>
         <!-- Go to script.js to complete Challenge 4 --> 
 
       </div>
