--- a/WDLesson3_7Practical/distance.html
+++ b/WDLesson3_7Practical/distance.html
@@ -27,7 +27,12 @@
         </p>
         <hr>
         <!-- Challenge 1: Create the necessary UI in order to calculate the distance between two points.   Observe all the variables on the right side of the equal side these are required pieces of information. -->
-
+        <input type="text" placeholder="enter x1" id="x1">
+        <input type="text" placeholder="enter x2" id="x2">
+        <input type="text" placeholder="enter y1" id="y1">
+        <input type="text" placeholder="enter y2" id="y2">
+        <input type="button" value="distance" onclick="CalcDist()">
+        <div id="output"></div>
         <!-- Go to script.js to complete Challenge 2 --> 
         
       </div>
