--- a/WDLesson3_8Practical/index.html
+++ b/WDLesson3_8Practical/index.html
@@ -31,12 +31,13 @@
 
         <!-- Challenge 1:  What information is required for the calculation? -->
         <input type="text" id="r" placeholder="Enter radius">
+        <input type="text" id="h" placeholder="Enter height">
  
         <!-- Challenge 2: Are the event listener and handler correctly added?-->
-        <input type="button" value="Volume" onlick="cylinder">
+        <input type="button" value="Volume" onclick=cylinder()>
 
         <!-- Challenge 3: Does the id of the text input match the refenence to it in JS?-->
-        <p id="ouput"></p>
+        <p id="output"></p>
       </div>
     </div>
     <div id="footer" class="container center">
