--- a/WDLesson4_1Practical/discount.html
+++ b/WDLesson4_1Practical/discount.html
@@ -12,18 +12,18 @@
         let price3 = parseFloat(document.getElementById("price3").value);
         let output = document.getElementById("output");
         let message = ""
-        // Challenge 1: total of all three prices
+        // Challenge 1: Create a variable total that is the sum of all three prices.
         let total = price1 + price2 + price3;
 
-        // Challenge 2: check for discount
+        // Challenge 2: If the total is more than 100, set message to "Discount earned" otherwise set message to "Not enough for discount"
         if (total > 100) {
           message = "Discount earned";
         } else {
           message = "Not enough for discount";
         }
 
-      // Challenge 3: display result
-      output.innerHTML = "Total: $" + total.toFixed(2) + "<br>" + message;
+        // Challenge 3: Display a message including the total and discount message
+        output.innerHTML = "Total: $" + total.toFixed(2) + "<br>" + message;
       }
     </script>
   </head>
