--- a/WDLesson4_1Practical/guessing.html
+++ b/WDLesson4_1Practical/guessing.html
@@ -17,10 +17,10 @@
         if (g < secret) {
           message = "Guess higher";
         // Challenge 6: If the guess is higher than secret, set message to "Guess lower" 
-        } else if (g > secret) {
+        }if (g > secret) {
           message = "Guess lower";
         // Challenge 7: If the guess is equal to secret, set message to "You got it!" 
-        } else if (g === secret) {
+        }if (g == secret) {
         message = "You got it!";
         }
         output.innerHTML = `<h3>${message}</h3>`
