--- a/WDLesson4_3Practical/index.html
+++ b/WDLesson4_3Practical/index.html
@@ -52,6 +52,12 @@
         <a href="hhttps://www.cdc.gov/growth-chart-training/hcp/using-bmi/calculating-bmi.html"> CDC Reference </a>
         <hr>
         <!-- Challenge 1: Create the UI.  You will need to look up the formula for BMI in order to determine the number of text inputs required. -->
+         <input type="text" id="height" placeholder="Enter height(inches)">
+         <input type="text" id="weight" placeholder="Enter weight(pounds)">
+         <br><br>
+         <input type="button" onclick="calculateBMI()" value="Calculate BMI">
+
+         <div id="output"></div>
       </div>
      
     </div>
