--- a/WDLesson4_2Practical/area.html
+++ b/WDLesson4_2Practical/area.html
@@ -24,7 +24,11 @@
     </div>
     <div class="container">
       <div class="card">
-        <!-- Challenge 1: Create the UI for the Scenario -->  
+        <!-- Challenge 1: Create the UI for the Scenario --> 
+        <input type="text" id="length" placeholder="Enter length">
+        <input type="text" id="width" placeholder="Enter width">
+        <input type="button" onclick="area()" value="AREA">
+        <div id="output"></div>
         <!-- Go to script.js for Challenge 2 -->     
       </div>
     </div>
